Bug 283728 - MSC crashes when review fetch completes during cache reload
Summary: MSC crashes when review fetch completes during cache reload
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: 1.2.1
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 282386 284139 284146 284180 284817 285299 285580 286176 286343 286903 288692 290145 291238 293679 294327 294370 296047 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-10 18:49 UTC by Gaetano Calafiore
Modified: 2015-03-15 11:26 UTC (History)
18 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gaetano Calafiore 2011-10-10 18:49:33 UTC
Application: muon-installer (1.2.1 "Caustic Carrionite")
KDE Platform Version: 4.7.1 (4.7.1)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-12-generic-pae i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
Nothing else than using moun to install some needed applications

-- Backtrace:
Application: Muon Software Center (muon-installer), signal: Segmentation fault
[Current thread is 1 (Thread 0xb48c4930 (LWP 1880))]

Thread 2 (Thread 0xb2280b70 (LWP 1881)):
#0  0xb7846424 in __kernel_vsyscall ()
#1  0xb5e7a40e in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0xb536634b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb5357896 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb5357c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb73bcb37 in QEventDispatcherGlib::processEvents (this=0x99b0348, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0xb738d1dd in QEventLoop::processEvents (this=0xb22802b0, flags=...) at kernel/qeventloop.cpp:149
#7  0xb738d421 in QEventLoop::exec (this=0xb22802b0, flags=...) at kernel/qeventloop.cpp:201
#8  0xb729090b in QThread::exec (this=0x996c308) at thread/qthread.cpp:498
#9  0xb736de2d in QInotifyFileSystemWatcherEngine::run (this=0x996c308) at io/qfilesystemwatcher_inotify.cpp:248
#10 0xb72937b3 in QThreadPrivate::start (arg=0x996c308) at thread/qthread_unix.cpp:331
#11 0xb543dd31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0xb5e890ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb48c4930 (LWP 1880)):
[KCrash Handler]
#7  0x0805e766 in value (akey=..., this=0x9c9c73c) at /usr/include/qt4/QtCore/qhash.h:607
#8  Application::getField (this=0x9c9c738, field=...) at /build/buildd/muon-1.2.1/installer/Application.cpp:342
#9  0x0805f0d7 in Application::untranslatedName (this=0x9c9c738) at /build/buildd/muon-1.2.1/installer/Application.cpp:68
#10 0x0805f29d in Application::name (this=0x9c9c738) at /build/buildd/muon-1.2.1/installer/Application.cpp:63
#11 0x08083b74 in ReviewsBackend::reviewsFetched (this=0x99b78d0, job=0x9b0ccf8) at /build/buildd/muon-1.2.1/installer/ReviewsBackend/ReviewsBackend.cpp:208
#12 0x0805e465 in ReviewsBackend::qt_metacall (this=0x99b78d0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfdf8698) at /build/buildd/muon-1.2.1/obj-i686-linux-gnu/installer/moc_ReviewsBackend.cpp:81
#13 0xb7394b7d in metacall (argv=0xbfdf8698, idx=6, cl=QMetaObject::InvokeMetaMethod, object=0x99b78d0) at kernel/qmetaobject.cpp:237
#14 QMetaObject::metacall (object=0x99b78d0, cl=QMetaObject::InvokeMetaMethod, idx=6, argv=0xbfdf8698) at kernel/qmetaobject.cpp:232
#15 0xb73a3a6a in QMetaObject::activate (sender=0x9b0ccf8, m=0xb6da558c, local_signal_index=3, argv=0xbfdf8698) at kernel/qobject.cpp:3278
#16 0xb6bf7a05 in KJob::result (this=0x9b0ccf8, _t1=0x9b0ccf8) at ./kjob.moc:194
#17 0xb6bf7a58 in KJob::emitResult (this=0x9b0ccf8) at ../../kdecore/jobs/kjob.cpp:312
#18 0xb760d05c in KIO::FileCopyJob::slotResult (this=0x9b0ccf8, job=0x9af1d90) at ../../kio/kio/job.cpp:2440
#19 0xb760cded in KIO::FileCopyJob::qt_metacall (this=0x9b0ccf8, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfdf8818) at ./jobclasses.moc:724
#20 0xb7394b7d in metacall (argv=0xbfdf8818, idx=32, cl=QMetaObject::InvokeMetaMethod, object=0x9b0ccf8) at kernel/qmetaobject.cpp:237
#21 QMetaObject::metacall (object=0x9b0ccf8, cl=QMetaObject::InvokeMetaMethod, idx=32, argv=0xbfdf8818) at kernel/qmetaobject.cpp:232
#22 0xb73a3a6a in QMetaObject::activate (sender=0x9af1d90, m=0xb6da558c, local_signal_index=3, argv=0xbfdf8818) at kernel/qobject.cpp:3278
#23 0xb6bf7a05 in KJob::result (this=0x9af1d90, _t1=0x9af1d90) at ./kjob.moc:194
#24 0xb6bf7a58 in KJob::emitResult (this=0x9af1d90) at ../../kdecore/jobs/kjob.cpp:312
#25 0xb7604738 in KIO::SimpleJob::slotFinished (this=0x9af1d90) at ../../kio/kio/job.cpp:494
#26 0xb760d2bd in KIO::TransferJob::slotFinished (this=0x9af1d90) at ../../kio/kio/job.cpp:1081
#27 0xb760b8f4 in KIO::TransferJob::qt_metacall (this=0x9af1d90, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfdf8ab4) at ./jobclasses.moc:369
#28 0xb7394b7d in metacall (argv=0xbfdf8ab4, idx=47, cl=QMetaObject::InvokeMetaMethod, object=0x9af1d90) at kernel/qmetaobject.cpp:237
#29 QMetaObject::metacall (object=0x9af1d90, cl=QMetaObject::InvokeMetaMethod, idx=47, argv=0xbfdf8ab4) at kernel/qmetaobject.cpp:232
#30 0xb73a3a6a in QMetaObject::activate (sender=0x9b163b0, m=0xb77df6a0, local_signal_index=4, argv=0x0) at kernel/qobject.cpp:3278
#31 0xb76bfb95 in KIO::SlaveInterface::finished (this=0x9b163b0) at ./slaveinterface.moc:171
#32 0xb76c2a19 in KIO::SlaveInterface::dispatch (this=0x9b163b0, _cmd=104, rawdata=...) at ../../kio/kio/slaveinterface.cpp:172
#33 0xb76bf17a in KIO::SlaveInterface::dispatch (this=0x9b163b0) at ../../kio/kio/slaveinterface.cpp:88
#34 0xb76b07a8 in KIO::Slave::gotInput (this=0x9b163b0) at ../../kio/kio/slave.cpp:344
#35 0xb76b101c in KIO::Slave::qt_metacall (this=0x9b163b0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfdf8d94) at ./slave.moc:82
#36 0xb7394b7d in metacall (argv=0xbfdf8d94, idx=30, cl=QMetaObject::InvokeMetaMethod, object=0x9b163b0) at kernel/qmetaobject.cpp:237
#37 QMetaObject::metacall (object=0x9b163b0, cl=QMetaObject::InvokeMetaMethod, idx=30, argv=0xbfdf8d94) at kernel/qmetaobject.cpp:232
#38 0xb73a3a6a in QMetaObject::activate (sender=0x9ae4490, m=0xb77dc508, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3278
#39 0xb75cfcd5 in KIO::Connection::readyRead (this=0x9ae4490) at ./connection.moc:92
#40 0xb75d050a in dequeue (this=<optimized out>) at ../../kio/kio/connection.cpp:82
#41 KIO::ConnectionPrivate::dequeue (this=0x9af2828) at ../../kio/kio/connection.cpp:71
#42 0xb75d05df in KIO::Connection::qt_metacall (this=0x9ae4490, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xa0531c8) at ./connection.moc:79
#43 0xb7394b7d in metacall (argv=0xa0531c8, idx=5, cl=QMetaObject::InvokeMetaMethod, object=0x9ae4490) at kernel/qmetaobject.cpp:237
#44 QMetaObject::metacall (object=0x9ae4490, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0xa0531c8) at kernel/qmetaobject.cpp:232
#45 0xb739f685 in QMetaCallEvent::placeMetaCall (this=0xa14e3a8, object=0x9ae4490) at kernel/qobject.cpp:535
#46 0xb73a6b52 in QObject::event (this=0x9ae4490, e=0xa14e3a8) at kernel/qobject.cpp:1217
#47 0xb6175d54 in notify_helper (e=0xa14e3a8, receiver=0x9ae4490, this=0x98743b0) at kernel/qapplication.cpp:4486
#48 QApplicationPrivate::notify_helper (this=0x98743b0, receiver=0x9ae4490, e=0xa14e3a8) at kernel/qapplication.cpp:4458
#49 0xb617b103 in QApplication::notify (this=0xa14e3a8, receiver=0x9ae4490, e=0xa14e3a8) at kernel/qapplication.cpp:3886
#50 0xb6f94721 in KApplication::notify (this=0xbfdf9560, receiver=0x9ae4490, event=0xa14e3a8) at ../../kdeui/kernel/kapplication.cpp:311
#51 0xb738e19e in QCoreApplication::notifyInternal (this=0xbfdf9560, receiver=0x9ae4490, event=0xa14e3a8) at kernel/qcoreapplication.cpp:787
#52 0xb7391f93 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#53 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9851300) at kernel/qcoreapplication.cpp:1428
#54 0xb73920ec in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1321
#55 0xb73bc6a4 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#56 postEventSourceDispatch (s=0x9876700) at kernel/qeventdispatcher_glib.cpp:277
#57 0xb535725f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#58 0xb5357990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#59 0xb5357c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#60 0xb73bcada in QEventDispatcherGlib::processEvents (this=0x9852238, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#61 0xb622de3a in QGuiEventDispatcherGlib::processEvents (this=0x9852238, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#62 0xb738d1dd in QEventLoop::processEvents (this=0xbfdf94c4, flags=...) at kernel/qeventloop.cpp:149
#63 0xb738d421 in QEventLoop::exec (this=0xbfdf94c4, flags=...) at kernel/qeventloop.cpp:201
#64 0xb739219d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#65 0xb61738f4 in QApplication::exec () at kernel/qapplication.cpp:3760
#66 0x0805db86 in main (argc=) at /build/buildd/muon-1.2.1/installer/main.cpp:61

Reported using DrKonqi
Comment 1 Jonathan Thomas 2011-10-22 23:16:43 UTC
*** Bug 284180 has been marked as a duplicate of this bug. ***
Comment 2 Jonathan Thomas 2011-10-22 23:16:47 UTC
*** Bug 284146 has been marked as a duplicate of this bug. ***
Comment 3 Jonathan Thomas 2011-10-22 23:16:52 UTC
*** Bug 284139 has been marked as a duplicate of this bug. ***
Comment 4 Jonathan Thomas 2011-10-23 20:54:47 UTC
*** Bug 282386 has been marked as a duplicate of this bug. ***
Comment 5 Jonathan Thomas 2011-10-25 11:15:27 UTC
*** Bug 284817 has been marked as a duplicate of this bug. ***
Comment 6 Jonathan Thomas 2011-10-25 22:18:04 UTC
Git commit 15323c46a8d945483e2abfb02a2d02049e46b4cf by Jonathan Thomas.
Committed on 26/10/2011 at 00:16.
Pushed by jmthomas into branch '1.2'.

Don't listen to reviewFetched signals during a cache reload. We'll crash if we try to
handle them.

BUG:283728
FIXED-IN:1.2.3

M  +1    -0    installer/ApplicationBackend.cpp
M  +13   -0    installer/ReviewsBackend/ReviewsBackend.cpp
M  +1    -0    installer/ReviewsBackend/ReviewsBackend.h

http://commits.kde.org/muon/15323c46a8d945483e2abfb02a2d02049e46b4cf
Comment 7 Jonathan Thomas 2011-10-25 22:18:04 UTC
Git commit 5eed5b0ec6d42bb6e41cbc2bfd6b075a7d40cc60 by Jonathan Thomas.
Committed on 26/10/2011 at 00:16.
Pushed by jmthomas into branch 'master'.

Don't listen to reviewFetched signals during a cache reload. We'll crash if we try to
handle them.

BUG:283728
FIXED-IN:1.2.3

M  +1    -0    installer/ApplicationBackend.cpp
M  +13   -0    installer/ReviewsBackend/ReviewsBackend.cpp
M  +1    -0    installer/ReviewsBackend/ReviewsBackend.h

http://commits.kde.org/muon/5eed5b0ec6d42bb6e41cbc2bfd6b075a7d40cc60
Comment 8 Christoph Feck 2011-10-30 09:46:42 UTC
*** Bug 285299 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2011-11-02 22:12:26 UTC
*** Bug 285580 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2011-11-09 11:26:29 UTC
*** Bug 286176 has been marked as a duplicate of this bug. ***
Comment 11 Christoph Feck 2011-11-12 13:39:00 UTC
*** Bug 286343 has been marked as a duplicate of this bug. ***
Comment 12 Christoph Feck 2011-11-18 11:37:52 UTC
*** Bug 286903 has been marked as a duplicate of this bug. ***
Comment 13 Jekyll Wu 2011-12-11 02:03:11 UTC
*** Bug 288692 has been marked as a duplicate of this bug. ***
Comment 14 Christoph Feck 2011-12-30 12:54:51 UTC
*** Bug 290145 has been marked as a duplicate of this bug. ***
Comment 15 Christoph Feck 2012-01-11 13:58:09 UTC
*** Bug 291238 has been marked as a duplicate of this bug. ***
Comment 16 Jonathan Thomas 2012-02-11 16:58:22 UTC
*** Bug 293679 has been marked as a duplicate of this bug. ***
Comment 17 Jekyll Wu 2012-02-18 01:04:33 UTC
*** Bug 294327 has been marked as a duplicate of this bug. ***
Comment 18 Jekyll Wu 2012-02-18 16:26:08 UTC
*** Bug 294370 has been marked as a duplicate of this bug. ***
Comment 19 Jekyll Wu 2012-03-15 09:01:32 UTC
*** Bug 296047 has been marked as a duplicate of this bug. ***