Don't listen to reviewFetched signals during a cache reload. We'll crash if we try to handle them.

BUG:283728
FIXED-IN:1.2.3